# scribegate

./: .gitignore  DEMO_SCRIPT.md  PRODUCTION_PATH.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: common.py  streamlit_app.py
app/views/: about.py  analytics.py  calibration.py  drift.py  economics.py  live_encounter.py  live_mode.py  moat.py  overview.py  provenance.py  review_queue.py  start_here.py
data/: live_demo_sample.json
data/golden_notes/: cataract_01.json  cataract_02.json  cataract_03.json  cataract_04.json  cataract_05.json  comprehensive_01.json  comprehensive_02.json  comprehensive_03.json  comprehensive_04.json  comprehensive_05.json  contactlens_01.json  contactlens_02.json  contactlens_03.json  contactlens_04.json  contactlens_05.json  glaucoma_01.json  glaucoma_02.json  glaucoma_03.json  glaucoma_04.json  glaucoma_05.json
data/results/: benchmark.md  calibration_report.json  candidate_golden.jsonl  econ_matrix.json  (+1 more)
scribegate/: __init__.py  analytics.py  audit.py  benchmark.py  calibration.py  cli.py  corrections.py  costs.py  drift.py  economics.py  generator.py  judge.py  live.py  moat.py  normalizer.py  router.py
specs/: INTERFACES.md  baseline.json  consent_copy.yaml  pricing.yaml  rubric.yaml  terminology.yaml  ui_copy.yaml
tests/: test_analytics.py  test_app_imports.py  test_audit.py  test_calibration.py  test_cli.py  test_corrections.py  test_drift.py  test_economics.py  test_generator.py  test_judge.py  test_live.py  test_moat.py  test_normalizer.py  test_router.py
(+26 files in other folders)
